SAK-17054 add info for site genration
git-svn-id: https://source.sakaiproject.org/svn/search/trunk@66976 66ffb92e-73f9-0310-93c1-f5514f145a0a